// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`foreach as list 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          Echo {
            "expressions": [
              Variable {
                "curly": false,
                "kind": "variable",
                "name": "a",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "array",
      },
      "value": List {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "b",
            },
          },
        ],
        "kind": "list",
        "shortForm": false,
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach as list with key 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          Echo {
            "expressions": [
              Variable {
                "curly": false,
                "kind": "variable",
                "name": "v",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "key": Variable {
        "curly": false,
        "kind": "variable",
        "name": "v",
      },
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "array",
      },
      "value": List {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "b",
            },
          },
        ],
        "kind": "list",
        "shortForm": false,
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach as short list 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          Echo {
            "expressions": [
              Variable {
                "curly": false,
                "kind": "variable",
                "name": "a",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "array",
      },
      "value": List {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "b",
            },
          },
        ],
        "kind": "list",
        "shortForm": true,
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach as short list with key 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          Echo {
            "expressions": [
              Variable {
                "curly": false,
                "kind": "variable",
                "name": "v",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "key": Variable {
        "curly": false,
        "kind": "variable",
        "name": "v",
      },
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "array",
      },
      "value": List {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "b",
            },
          },
        ],
        "kind": "list",
        "shortForm": true,
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach as variable 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          Echo {
            "expressions": [
              Variable {
                "curly": false,
                "kind": "variable",
                "name": "a",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "array",
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach as variable by ref 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          Echo {
            "expressions": [
              Variable {
                "curly": false,
                "kind": "variable",
                "name": "a",
              },
            ],
            "kind": "echo",
            "shortForm": false,
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Variable {
        "curly": false,
        "kind": "variable",
        "name": "array",
      },
      "value": Variable {
        "byref": true,
        "curly": false,
        "kind": "variable",
        "name": "var",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach unpacking #2 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          ExpressionStatement {
            "expression": Call {
              "arguments": [
                Variable {
                  "curly": false,
                  "kind": "variable",
                  "name": "value",
                },
              ],
              "kind": "call",
              "what": Name {
                "kind": "name",
                "name": "print_r",
                "resolution": "uqn",
              },
            },
            "kind": "expressionstatement",
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Array {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": true,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "2",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "3",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "4",
            },
          },
        ],
        "kind": "array",
        "shortForm": false,
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "value",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach unpacking #3 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          ExpressionStatement {
            "expression": Call {
              "arguments": [
                Variable {
                  "curly": false,
                  "kind": "variable",
                  "name": "value",
                },
              ],
              "kind": "call",
              "what": Name {
                "kind": "name",
                "name": "print_r",
                "resolution": "uqn",
              },
            },
            "kind": "expressionstatement",
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Array {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Array {
              "items": [
                Entry {
                  "byRef": false,
                  "key": null,
                  "kind": "entry",
                  "unpack": true,
                  "value": Variable {
                    "curly": false,
                    "kind": "variable",
                    "name": "var",
                  },
                },
              ],
              "kind": "array",
              "shortForm": true,
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "2",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "3",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "4",
            },
          },
        ],
        "kind": "array",
        "shortForm": true,
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "value",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach unpacking #4 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          ExpressionStatement {
            "expression": Call {
              "arguments": [
                Variable {
                  "curly": false,
                  "kind": "variable",
                  "name": "value",
                },
              ],
              "kind": "call",
              "what": Name {
                "kind": "name",
                "name": "print_r",
                "resolution": "uqn",
              },
            },
            "kind": "expressionstatement",
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Array {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Array {
              "items": [
                Entry {
                  "byRef": false,
                  "key": null,
                  "kind": "entry",
                  "unpack": true,
                  "value": Variable {
                    "curly": false,
                    "kind": "variable",
                    "name": "var",
                  },
                },
              ],
              "kind": "array",
              "shortForm": false,
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "2",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "3",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "4",
            },
          },
        ],
        "kind": "array",
        "shortForm": false,
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "value",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;

exports[`foreach unpacking 1`] = `
Program {
  "children": [
    Foreach {
      "body": Block {
        "children": [
          ExpressionStatement {
            "expression": Call {
              "arguments": [
                Variable {
                  "curly": false,
                  "kind": "variable",
                  "name": "value",
                },
              ],
              "kind": "call",
              "what": Name {
                "kind": "name",
                "name": "print_r",
                "resolution": "uqn",
              },
            },
            "kind": "expressionstatement",
          },
        ],
        "kind": "block",
      },
      "key": null,
      "kind": "foreach",
      "shortForm": false,
      "source": Array {
        "items": [
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": true,
            "value": Variable {
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "2",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "3",
            },
          },
          Entry {
            "byRef": false,
            "key": null,
            "kind": "entry",
            "unpack": false,
            "value": Number {
              "kind": "number",
              "value": "4",
            },
          },
        ],
        "kind": "array",
        "shortForm": true,
      },
      "value": Variable {
        "curly": false,
        "kind": "variable",
        "name": "value",
      },
    },
  ],
  "errors": [],
  "kind": "program",
}
`;
